# gmailtools

./: .gitignore  CLAUDE.md  PYTHON_STYLE.md  README.md  SCRIPT_AND_CONFIG_STYLE.md  TODO.md  pyproject.toml
src/gmailtools/: auth.py  cli.py  client.py
