[project]
name = "gmailtools"
version = "0.1.0"
description = "Personal Gmail CLI: search, label, archive, trash via the Gmail API."
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "typer>=0.12",
]

[project.scripts]
gmt = "gmailtools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmailtools"]
